force-app/main/default/objects/Inspection_Request__c/Inspection_Request__c.object-meta.xml
<CustomObject>
    <description>Contains incoming requests for inspection such as License and Registration Requests.  Tied to Cases with child Inspections.

 The following DLSE Forms are covered: 177, 106, 104, 810, 666, 123</description>
    <label>Inspection Request</label>
    <nameField>
        <displayFormat>IR-{000000}</displayFormat>
        <label>Inspection Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>