force-app/main/default/objects/Inspection_Request__c/fields/Assigned_Deputy_Emp__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Emp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deputy assigned to the case at the time the inspection request was assigned to a deputy</description>
    <inlineHelpText>Deputy assigned to perform the inspection request</inlineHelpText>
    <label>Assigned Deputy</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>