force-app/main/default/objects/Inspection_Request__c/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>Business City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>