force-app/main/default/objects/Inspection_Request__c/fields/Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Business_Street__c</fullName>
    <description>Business street address</description>
    <inlineHelpText>Business street address</inlineHelpText>
    <label>Business Street</label>
    <type>TextArea</type>
</CustomField>