force-app/main/default/objects/Inspection_Request__c/fields/Business_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Zip_Code__c</fullName>
    <label>Business Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>