force-app/main/default/objects/Inspection_Request__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>TODAY()+30</defaultValue>
    <description>Defaults to 30 days from today</description>
    <inlineHelpText>Defaults to 30 days from today</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>