force-app/main/default/objects/Inspection_Request__c/fields/Job_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_City__c</fullName>
    <label>Job Site City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>