force-app/main/default/objects/Inspection_Request__c/fields/Job_Site_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Zip_Code__c</fullName>
    <label>Job Site Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>