force-app/main/default/objects/Inspection_Request__c/fields/L_R_File_Number__c.field-meta.xml
<CustomField>
    <fullName>L_R_File_Number__c</fullName>
    <description>Used to specify the License and Registration HQ Internal File Number</description>
    <inlineHelpText>Used to specify the License and Registration HQ Internal File Number</inlineHelpText>
    <label>L&amp;R File Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>