force-app/main/default/objects/Inspection_Request__c/fields/Other_Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Inspection_Type__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is selected as the type of request, please define the request here.</inlineHelpText>
    <label>Other Inspection Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>