force-app/main/default/objects/Inspection_Request__c/fields/Recommendation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to True once a Senior Deputy has Approved the Recommendation</description>
    <inlineHelpText>This is set to True once a Senior Deputy has Approved the Recommendation</inlineHelpText>
    <label>Recommendation Approved</label>
    <type>Checkbox</type>
</CustomField>