force-app/main/default/objects/Inspection_Request__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <description>Deputy uses this to specify the recommendations on the Inspection Request related to the Inspection.  Once populated click Submit for Approval to send to the Senior Deputy for Approval.</description>
    <inlineHelpText>Deputy uses this to specify the recommendations on the Inspection Request related to the Inspection.  Once populated click Submit for Approval to send to the Senior Deputy for Approval.</inlineHelpText>
    <label>Recommendations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>