force-app/main/default/objects/Inspection_Request__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <description>Select the type of request being made. Make sure to attach all supporting materials</description>
    <inlineHelpText>Select the type of request being made. Make sure to attach all supporting materials</inlineHelpText>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection - Garment Home Inspection</fullName>
            </value>
            <value>
                <fullName>Inspection - Car Wash</fullName>
            </value>
            <value>
                <fullName>Inspection - Sheltered Workshop</fullName>
            </value>
            <value>
                <fullName>Inspection - Sub‐Minimum Wage</fullName>
            </value>
            <value>
                <fullName>Inspection - Industrial Homework</fullName>
            </value>
            <value>
                <fullName>Inspection - IWC Exemption Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>