force-app/main/default/objects/Inspection_Request__c/recordTypes/License_and_Registration.recordType-meta.xml
<RecordType>
    <fullName>License_and_Registration</fullName>
    <active>true</active>
    <description>Requests for inspections from Licenses and Registrations</description>
    <label>License and Registration</label>
</RecordType>