force-app/main/default/objects/Inspection_Request__c/validationRules/Must_Populate_LR_File_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Populate_LR_File_Number</fullName>
    <active>true</active>
    <description>In order to submit this Inspection Request, you must include the L&amp;R File Number</description>
    <errorConditionFormula>ISBLANK(L_R_File_Number__c)</errorConditionFormula>
    <errorDisplayField>L_R_File_Number__c</errorDisplayField>
    <errorMessage>In order to submit this Inspection Request, you must include the L&amp;R File Number</errorMessage>
</ValidationRule>