force-app/main/default/objects/Inspection_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Legal_Entity__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Assigned_Deputy__c</columns>
    <columns>Assigned_Senior_Deputy__c</columns>
    <columns>Requesting_Party_User__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>